# BrothFish

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  setup.py
crashout/: imsohappy.md
include/chess/: board.h  evaluate.h  piece.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
python_gui/: CMakeLists.txt  engine_binding.cpp  engine_wrapper.py  main.py  requirements.txt
python_gui/incase_of_crashout/: debug_import.py  debug_test.py  import_test.py  module_test.py  simple_test.py  test_import.py  test_simple_engine.py
src/chess/: board.cpp  board_moves.cpp  evaluate.cpp  piece.cpp
